# appstore

./: .gitattributes  .gitignore  .swiftlint.yml  ATTRIBUTES.md  CLAUDE.md  README.md  TEST_PLAN.md  analyze_keywords.py  run_tests.swift
DemoLanguageModelChooseKeywords/: ContentView.swift  DemoLanguageModelChooseKeywordsApp.swift  generate_keywords_playground.swift
appstore/: AnalyzeCommand.swift  AnalyzeDatabase.swift  AppStoreAPI.swift  CommandParser.swift  CommandParser.swift.backup  CommonOptions.swift  CommonOptionsParser.swift  EnvironmentConfig.swift  FormatUtils.swift  HelpCommand.swift  ListCommand.swift  LookupCommand.swift  MarkdownFormatter.swift  OutputFormatter.swift  OutputManager.swift  OutputOptions.swift  RanksCommand.swift  RanksOptions.swift  RateLimiter.swift  ScrapeCommand.swift  SearchCommand.swift  SearchOptions.swift  TopCommand.swift  main.swift
appstore.xcodeproj/: project.pbxproj
appstoreTests/: CommandParserTests.swift  MetadataTests.swift  OutputOptionsTests.swift  SearchAttributeTests.swift
gold/: .gitattributes  .gitignore  CHECK_SUMMARY.md  DATABASE_MIGRATION.md  FIXES_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  README.md  USAGE.md  analyze_selected.sh  find_gold.sh  generate_html.py  generate_keyword_report.py  import_all_countries.py  import_uk_keywords.py  keywords_scored.json  monthly_search_term_rank_2024-08.xlsx  monthly_search_term_rank_2025-07.xlsx  monthly_search_term_rank_2025-08.xlsx  monthly_search_term_rank_2025-09.xlsx  process_keywords.py  (+5 more)
python/: pyproject.toml
python/src/appstore_mcp_server/: __init__.py  __main__.py
(+26 files in other folders)
